--- a/index.html
+++ b/index.html
@@ -94,27 +94,46 @@
       y.async=1;(b=p.getElementsByTagName(P)[0]).parentNode.insertBefore(y,b)
     }(window,document,'script');
 
-    // initialize the SDK
-  braze.initialize('3331ee19-2784-47d6-ae99-11911b4cfd87', {
-    baseUrl: "sondheim.braze.com",
-    enableLogging: true, 
-    minimumIntervalBetweenTriggerActionsInSeconds: 5
-  });
- // optionally show all in-app messages without custom handling
-braze.automaticallyShowInAppMessages();
+    // Initialize the mParticle SDK 
+    window.mParticle ={
+      config: {
+        isDevelopmentMode :true, 
+        logLevel : verbose, 
+        identifyRequest: {
+          useIdentities:{
+            customerid: 'testLL', 
+            email:"lauren.libretti@braze.com"
+          },
+        }
+      },
+    }; 
+    (
+    function(e){window.mParticle=window.mParticle||{};window.mParticle.EventType={Unknown:0,Navigation:1,Location:2,Search:3,Transaction:4,UserContent:5,UserPreference:6,Social:7,Other:8};window.mParticle.eCommerce={Cart:{}};window.mParticle.Identity={};window.mParticle.config=window.mParticle.config||{};window.mParticle.config.rq=[];window.mParticle.config.snippetVersion=2.3;window.mParticle.ready=function(e){window.mParticle.config.rq.push(e)};var i=["endSession","logError","logBaseEvent","logEvent","logForm","logLink","logPageView","setSessionAttribute","setAppName","setAppVersion","setOptOut","setPosition","startNewSession","startTrackingLocation","stopTrackingLocation"];var n=["setCurrencyCode","logCheckout"];var t=["identify","login","logout","modify"];i.forEach(function(e){window.mParticle[e]=o(e)});n.forEach(function(e){window.mParticle.eCommerce[e]=o(e,"eCommerce")});t.forEach(function(e){window.mParticle.Identity[e]=o(e,"Identity")});function o(i,n){return function(){if(n){i=n+"."+i}var e=Array.prototype.slice.call(arguments);e.unshift(i);window.mParticle.config.rq.push(e)}}var r,c,a=window.mParticle.config,s=a.isDevelopmentMode?1:0,l="?env="+s,w=window.mParticle.config.dataPlan;if(w){r=w.planId;c=w.planVersion;if(r){if(c&&(c<1||c>1e3)){c=null}l+="&plan_id="+r+(c?"&plan_version="+c:"")}}var d=window.mParticle.config.versions;var m=[];if(d){Object.keys(d).forEach(function(e){m.push(e+"="+d[e])})}var f=document.createElement("script");f.type="text/javascript";f.async=true;f.src=("https:"==document.location.protocol?"https://jssdkcdns":"http://jssdkcdn")+".mparticle.com/js/v2/"+e+"/mparticle.js"+l+"&"+m.join("&");var p=document.getElementsByTagName("script")[0];p.parentNode.insertBefore(f,p)}
+    )
+    // Insert your API key below
+    ("12a01011d7803b4a832c68f3b52d243a");    
 
-// optionally set the current user's External ID
-//if (isLoggedIn){
-//    braze.changeUser(userIdentifier);
-//}
+    // initialize the Braze SDK
+//   braze.initialize('3331ee19-2784-47d6-ae99-11911b4cfd87', {
+//     baseUrl: "sondheim.braze.com",
+//     enableLogging: true, 
+//     minimumIntervalBetweenTriggerActionsInSeconds: 5
+//   });
+//  // optionally show all in-app messages without custom handling
+// braze.automaticallyShowInAppMessages();
 
-// if you use Content Cards
-//braze.subscribeToContentCardsUpdates(function(cards){
-    // cards have been updated
-//});
+// // optionally set the current user's External ID
+// //if (isLoggedIn){
+// //    braze.changeUser(userIdentifier);
+// //}
 
-// Be sure to call `openSession` after `automaticallyShowInAppMessages`
-braze.openSession();
+// // if you use Content Cards
+// //braze.subscribeToContentCardsUpdates(function(cards){
+//     // cards have been updated
+// //});
+
+// // Be sure to call `openSession` after `automaticallyShowInAppMessages`
+// braze.openSession();
 
 
   </script>
@@ -122,7 +141,7 @@ braze.openSession();
 
 <body>
 
-  <h1>Braze Web SDK OKR Implementation</h1>
+  <h1>Braze Web SDK mParticle OKR Implementation</h1>
   <h3>By Lauren Libretti</h3>
 
   <br />
@@ -130,15 +149,10 @@ braze.openSession();
 
 
   <a href="https://js.appboycdn.com/web-sdk/latest/doc/module-appboy.html" target="_blank">Link to Web SDK Documentation (Main Class Methods)</a>
-
-  <br />
   <br />
 
   <a href="https://js.appboycdn.com/web-sdk/latest/doc/ab.User.html" target="_blank">Link to Web SDK Documentation (getUser() Subclass Methods)</a>
-
   <br />
-  <br />
-
   <a href="https://sweeney.braze.com/users/user_search/61e8a0327faa5f7482656105?locale=en" target="_blank">Link to Braze Dashboard</a>
 
   <!-- Modal -->
@@ -178,20 +192,19 @@ braze.openSession();
   </div> -->
 
   <br />
+
+  <h2>Set User </h2>
+  <br />
   <br />
 
-  <button class="specialButton" onclick="user()">Set User Attributes</button>
-  <br />
-  <br />
-
-  <div id="user" style="display:none">
+  <div id="user" style="display:onClick">
 
     User ID:
     <input id="change_user_text" type="text" name="userid">
     <button id="change_user_button">Submit</button><br />
     <br />
 
-    First Name:
+    <!-- First Name:
     <input id="fn_text" type="text" name="firstname">
     <button id="fn_button">Submit</button><br />
     <br />
@@ -236,15 +249,15 @@ braze.openSession();
     Phone Number:
     <input id="phone_number_text" type="text" name="phonenumber">
     <button id="phone_number_button">Submit</button><br />
-    <br />
+    <br /> -->
 
   </div>
 
-  <button class="specialButton" onclick="customA()">Set Custom Attributes</button>
+  <h2>Set Custom Attributes</h2>
   <br />
   <br />
 
-  <div id="customA" style="display:none">
+  <div id="customA" style="display:onclick">
 
     Attribute Name:
     <input id="attribute_name" type="text" name="attributename"><br />
@@ -259,11 +272,11 @@ braze.openSession();
 
   </div>
 
-  <button class="specialButton" onclick="customE()">Log Custom Events</button>
+  <h2>Log Custom Events</h2>
   <br />
   <br />
 
-  <div id="customE" style="display:none">
+  <div id="customE" style="display:onclick">
 
     Event Name:
     <input id="event_name" type="text" name="eventname"><br />
@@ -278,10 +291,10 @@ braze.openSession();
 
   </div>
 
-  <button class="specialButton" onclick="purchases()">Log Purchases</button>
-  <br />
+  <!-- <button class="specialButton" onclick="purchases()">Log Purchases</button>
+  <br /> -->
 
-  <div id="purchases" style="display:none">
+  <!-- <div id="purchases" style="display:none">
 
     <br />
     Product ID:
@@ -303,7 +316,7 @@ braze.openSession();
     <button id="log_purchase_button">Submit</button><br />
     <br />
 
-  </div>
+  </div> -->
 
   
 <h2 style="color:green;">Push</h2>
